--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,8 @@ Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 flatbuffers==25.9.23
 gast==0.6.0
-google-ai-generativelanguage==0.6.15
-google-api-python-client==2.187.0
-google-auth-httplib2==0.2.1
 google-pasta==0.2.0
-googleapis-common-protos==1.72.0
 grpcio==1.76.0
-grpcio-status==1.71.2
 h11==0.16.0
 h5py==3.15.1
 httpcore==1.0.9
@@ -64,9 +59,8 @@ sniffio==1.3.1
 SQLAlchemy==2.0.44
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
 tensorflow-io-gcs-filesystem==0.37.1
-tensorflow-macos==2.16.2
+tensorflow==2.16.2
 termcolor==3.2.0
 tqdm==4.67.1
 typing-inspection==0.4.2
@@ -75,3 +69,4 @@ uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 wrapt==2.0.1
+gunicorn==23.0.0
